# chaoscontext-ai

./: docker-compose.yaml
backend/: .gitignore  Dockerfile  pyproject.toml
backend/app/: agents.py  config.py  main.py  schemas.py  tools.py
backend/data/: mock_notion.json  mock_slack.json
docs/: PRD.md  SPECS.md  design-system-documentation.md
frontend/: Dockerfile  bun.lockb  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AgentMessage.css  AgentMessage.tsx  ChatCanvas.tsx  ChatInput.tsx  MessageList.tsx  Sidebar.tsx  ThoughtProcess.tsx  UserMessage.tsx
frontend/src/hooks/: useChat.ts
frontend/src/lib/: storage.ts
frontend/src/types/: index.ts
